# rust-gpu-test

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: compute.wgsl  main.rs
