[package]
name = "rust-gpu-test"
version = "0.1.0"
authors = ["jiegec <noc@jiegec.ac.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
accel = { git = "https://github.com/rust-accel/accel.git" }
accel-derive = { git = "https://github.com/rust-accel/accel.git" }
anyhow = "1.0"
