[package]
name = "rust-gpu-test"
version = "0.1.0"
authors = ["jiegec <noc@jiegec.ac.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "29.0.1"
pollster = "0.4.0"
bytemuck = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
flume = "0.12.0"
